Revision history for {{$dist->name}}

{{$NEXT}}

0.95      2014-01-26 17:41:29Z
        - bumped the minimum version needed for the (optional) prerequisite
          WWW::Pastebin::PastebinCom::Create, to avoid errors in previous
          versions (thanks, Zoffix!)

0.94      2014-01-18 22:13:29Z
        - updated and fixed debian and ubuntu language mappings (haarg, PR#1)

0.93      2014-01-14 00:41:21Z
        - packaging converted to Dist::Zilla; handling of optional features
          fixed (see RT#91053)

0.92    2013-04-26
        Fix the language mappins for Ubuntu's pastebin (Sergey Romanov)
        Don't need to load Moose in the tests (Sergey Romanov)

0.91    2013-01-27
        Decode incoming text as utf8 (Jesse Luehrs)
        Support for GITHUB_USER and GITHUB_PASS (Rafael Kitover)
        Name the gist file `nopaste` not `nopaste.txt` for possible syntax highlighting (Rafael Kitover)
        Use decode_json not a regular expression to decode Gist response body (Shawn M Moore)
        Give a hint to perldoc App::Nopaste::Service::Gist on 401 (Shawn M Moore)

0.90    2012-10-30
        Port from Moose and MooseX::Getopt to Getopt::Long::Descriptive (frew)
            App::Nopaste is not using any interesting Moose features,
            so it doesn't make sense to pay the startup cost (even
            though it's probably dominated by network latency)

            Please report any regressions!

0.35    2012-07-17
        Don't barf when gist-ing STDIN. (Ricardo SIGNES)

0.34    2012-07-14
        Support for GitHub's v3 API [Вячеслав Тихановский (vti)]
            Thanks also to Ricardo SIGNES for the call to arms:
                http://rjbs.manxome.org/rubric/entry/1964

0.33    2011-12-15
        Support for --description in Gist (zengargoyle@gmail.com) [rt.cpan.org #73272]

0.32    2011-10-21
        Better error reporting (David Golden)
        Fix some attribution errors (Salvatore Bonaccorso) [rt.cpan.org #70434]

0.31    2011-08-30