@@ -10,7 +10,6 @@ Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
 Git::Tag.tag_format = %v%t
 Test::MinimumVersion.max_target_perl = 5.008003
 -remove = PodWeaver
--remove = AutoPrereqs
 -remove = PodCoverageTests      ; TODO
 -remove = Test::PodSpelling     ; TODO
 -remove = Test::Pod::No404s     ; TODO
@@ -19,20 +18,6 @@ Test::MinimumVersion.max_target_perl = 5.008003
 [PodVersion]
 
 [ContributorsFromGit]
-
-[Prereqs / RuntimeRequires]
-WWW::Mechanize = 0
-Module::Pluggable = 0
-Getopt::Long::Descriptive = 0.090
-Class::Load = 0
-URI::Escape = 0
-JSON = 0
-base = 0
-Exporter = 0
-
-[Prereqs / TestRequires]
-Test::More = 0
-LWP::Protocol = 0
 
 [OptionalFeature / pastebin]
 -description = pastebin.com support
